# niobe

./: CMakeLists.txt  README.md
docs/: design.md
include/: common.h
scripts/: format_code.sh  generate_docs.sh  run_tests.sh
src/: main.cpp
src/cpu/: ALU.h  CPU.cpp  CPU.h  Instruction.cpp  Instruction.h
src/emulator/: Emulator.cpp  Emulator.h
src/memory/: Memory.cpp  Memory.h
src/utils/: Logger.cpp  Logger.h
tests/: CMakeLists.txt  cpu_tests.cpp  emulator_tests.cpp  instruction_tests.cpp  memory_tests.cpp
